tests/NormalTests/paczka1/fuzzy1/49728826.err
Error in line 10: pt76m9 A369 59,2
Error in line 17: pt76m9 A37 47,2
